do the rerouting ourselves so we don't depend on the OS.

-------------------------------------------------------------------------------

Fri Sep 17 12:45:36 PDT 1999
(Mandrake)

fixed the kde support causing segfault bug
fixed the kde event duplication bugs.
fixed "segfault everything on non-desk-0 bug"

-------------------------------------------------------------------------------

Fri Sep 17 13:04:10 PDT 1999
(Mandrake)

fixed a hard-to-find crashing bug in kde support

-------------------------------------------------------------------------------

Fri Sep 17 13:14:42 PDT 1999
(Mandrake)

titlebar updates update in the kpanel taskbar.

-------------------------------------------------------------------------------

Fri Sep 17 15:33:29 PDT 1999
(Mandrake)

when we change desktops and/or areas, unfocus the currently focused window.

-------------------------------------------------------------------------------

Fri Sep 17 15:55:05 PDT 1999
(Mandrake)

fix minor casting bug

-------------------------------------------------------------------------------

Sat Sep 18 11:04:41 PDT 1999
(Raster)

shen changing numebr of desktops - get rid of the old desktops first before
chanign the number

dont looses as much accuracy when moving pagers in the pager view.

-------------------------------------------------------------------------------

Sat Sep 18 22:58:43 PDT 1999
(Raster)

fix recursive call in iconification. :)

-------------------------------------------------------------------------------

Sat Sep 18 23:10:16 PDT 1999
(Raster)

ok - be paranoid abotu the creation of ximages and if it fails... :)

-------------------------------------------------------------------------------

Sun Sep 19 13:08:30 PDT 1999
(Mandrake)

fixed a compile warning in iconify.c

-------------------------------------------------------------------------------

Sun Sep 19 14:28:18 PDT 1999
(Mandrake)

added another todo bug with kpanel