@@ -3,7 +3,6 @@ raster: 	must update dox docs fully
 cK:		keeping the groups file in sync with the existing groups that need to be remembered. I'm sure there are bugs in that.
 mandrake:   kontrol-center seems to crash E when you click on desktop. needs fixing
 mandrake:   need to write some code to un-override redirect kfm and kpanel so I can manage them easier
-mandrake:   kpanel seems to have issues when I copy a window from 1 desktop to another.  mapping issues, I believe
 
 FEATURES:
 raster: 	add dnd to iconbox
